--- a/manifest.json
+++ b/manifest.json
@@ -4,13 +4,14 @@
     "manifest_version": 2,
     "description": "扇贝单词自动搜索单词相关图片。",
     "icons": { "128": "16.png"},
-    "permissions": ["webRequest", "webRequestBlocking", "http://*.google.com/", "https://*.google.com/", "https://www.shanbay.com/"],
+    "permissions": ["webRequest", "webRequestBlocking", "*://*/*"],
     "background": {
       "scripts": [ "background.js" ]
    },
     "content_scripts": [
     {
       "matches": ["https://www.shanbay.com/*"],
-      "js": ["jquery.js", "myscrypt.js"]
+      "js": ["jquery.js", "myscrypt.js"],
+      "all_frames": true
     }]
 }
